# ZPAD

./: .gitignore  Lab2_part2_Energy.ipynb  README.md
.ipynb_checkpoints/: Lab2_Part1_vhi-checkpoint.ipynb
lab2/: .gitignore  Lab2_Part1_vhi.ipynb  Lab2_part2_Energy.ipynb  README.md  requirements.txt
lab3/: .gitignore  DataVisual.ipynb  README.md  requirements.txt
lab4/: README.md  SignalAnalysis.ipynb  requirements.txt
lab5/: README.md  app.py
lab6/: CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab6/include/: CameraProvider.hpp  Display.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab6/src/: CameraProvider.cpp  Display.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
lab7/: CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab7/include/: CameraProvider.hpp  FaceDetector.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab7/src/: CameraProvider.cpp  Display.cpp  FaceDetector.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
